seaqt/QtWidgets/gen_qundoview.nim

proc fcQUndoView_override_virtual_setSelectionModel(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_setSelectionModel".}
proc fQUndoView_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void{.importc: "QUndoView_virtualbase_keyboardSearch".}
proc fcQUndoView_override_virtual_keyboardSearch(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_keyboardSearch".}
proc fQUndoView_virtualbase_sizeHintForRow(self: pointer, row: cint): cint{.importc: "QUndoView_virtualbase_sizeHintForRow".}
proc fcQUndoView_override_virtual_sizeHintForRow(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_sizeHintForRow".}
proc fQUndoView_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint{.importc: "QUndoView_virtualbase_sizeHintForColumn".}
proc fcQUndoView_override_virtual_sizeHintForColumn(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_sizeHintForColumn".}
proc fQUndoView_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QUndoView_virtualbase_inputMethodQuery".}
proc fcQUndoView_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_inputMethodQuery".}
proc fQUndoView_virtualbase_selectAll(self: pointer, ): void{.importc: "QUndoView_virtualbase_selectAll".}
proc fcQUndoView_override_virtual_selectAll(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_selectAll".}
proc fQUndoView_virtualbase_updateEditorData(self: pointer, ): void{.importc: "QUndoView_virtualbase_updateEditorData".}
proc fcQUndoView_override_virtual_updateEditorData(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_updateEditorData".}
proc fQUndoView_virtualbase_updateEditorGeometries(self: pointer, ): void{.importc: "QUndoView_virtualbase_updateEditorGeometries".}
proc fcQUndoView_override_virtual_updateEditorGeometries(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_updateEditorGeometries".}
proc fQUndoView_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void{.importc: "QUndoView_virtualbase_verticalScrollbarAction".}
proc fcQUndoView_override_virtual_verticalScrollbarAction(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_verticalScrollbarAction".}
proc fQUndoView_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void{.importc: "QUndoView_virtualbase_horizontalScrollbarAction".}
proc fcQUndoView_override_virtual_horizontalScrollbarAction(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_horizontalScrollbarAction".}
proc fQUndoView_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QUndoView_virtualbase_verticalScrollbarValueChanged".}
proc fcQUndoView_override_virtual_verticalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_verticalScrollbarValueChanged".}
proc fQUndoView_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QUndoView_virtualbase_horizontalScrollbarValueChanged".}
proc fcQUndoView_override_virtual_horizontalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_horizontalScrollbarValueChanged".}
proc fQUndoView_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void{.importc: "QUndoView_virtualbase_closeEditor".}
proc fcQUndoView_override_virtual_closeEditor(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_closeEditor".}
proc fQUndoView_virtualbase_commitData(self: pointer, editor: pointer): void{.importc: "QUndoView_virtualbase_commitData".}
proc fcQUndoView_override_virtual_commitData(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_commitData".}
proc fQUndoView_virtualbase_editorDestroyed(self: pointer, editor: pointer): void{.importc: "QUndoView_virtualbase_editorDestroyed".}
proc fcQUndoView_override_virtual_editorDestroyed(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_editorDestroyed".}
proc fQUndoView_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool{.importc: "QUndoView_virtualbase_edit2".}
proc fcQUndoView_override_virtual_edit2(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_edit2".}
proc fQUndoView_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint{.importc: "QUndoView_virtualbase_selectionCommand".}
proc fcQUndoView_override_virtual_selectionCommand(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_selectionCommand".}
proc fQUndoView_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QUndoView_virtualbase_focusNextPrevChild".}
proc fcQUndoView_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_focusNextPrevChild".}
proc fQUndoView_virtualbase_viewportEvent(self: pointer, event: pointer): bool{.importc: "QUndoView_virtualbase_viewportEvent".}
proc fcQUndoView_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_viewportEvent".}
proc fQUndoView_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_mousePressEvent".}
proc fcQUndoView_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_mousePressEvent".}
proc fQUndoView_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_mouseDoubleClickEvent".}
proc fcQUndoView_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_mouseDoubleClickEvent".}
proc fQUndoView_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_dragEnterEvent".}
proc fcQUndoView_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_dragEnterEvent".}
proc fQUndoView_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_focusInEvent".}
proc fcQUndoView_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_focusInEvent".}
proc fQUndoView_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_focusOutEvent".}
proc fcQUndoView_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_focusOutEvent".}
proc fQUndoView_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_keyPressEvent".}
proc fcQUndoView_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_keyPressEvent".}
proc fQUndoView_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_inputMethodEvent".}
proc fcQUndoView_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_inputMethodEvent".}
proc fQUndoView_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool{.importc: "QUndoView_virtualbase_eventFilter".}
proc fcQUndoView_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_eventFilter".}
proc fQUndoView_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QUndoView_virtualbase_minimumSizeHint".}
proc fcQUndoView_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_minimumSizeHint".}
proc fQUndoView_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QUndoView_virtualbase_sizeHint".}
proc fcQUndoView_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_sizeHint".}
proc fQUndoView_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QUndoView_virtualbase_setupViewport".}
proc fcQUndoView_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_setupViewport".}
proc fQUndoView_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QUndoView_virtualbase_contextMenuEvent".}
proc fcQUndoView_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_contextMenuEvent".}
proc fQUndoView_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QUndoView_virtualbase_changeEvent".}
proc fcQUndoView_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_changeEvent".}
proc fQUndoView_virtualbase_devType(self: pointer, ): cint{.importc: "QUndoView_virtualbase_devType".}
proc fcQUndoView_override_virtual_devType(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_devType".}
proc fQUndoView_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QUndoView_virtualbase_setVisible".}
proc fcQUndoView_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_setVisible".}
proc fQUndoView_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QUndoView_virtualbase_heightForWidth".}
proc fcQUndoView_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_heightForWidth".}
proc fQUndoView_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QUndoView_virtualbase_hasHeightForWidth".}
proc fcQUndoView_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_hasHeightForWidth".}
proc fQUndoView_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QUndoView_virtualbase_paintEngine".}
proc fcQUndoView_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_paintEngine".}
proc fQUndoView_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_keyReleaseEvent".}
proc fcQUndoView_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_keyReleaseEvent".}
proc fQUndoView_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_enterEvent".}
proc fcQUndoView_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_enterEvent".}
proc fQUndoView_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_leaveEvent".}
proc fcQUndoView_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_leaveEvent".}
proc fQUndoView_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_moveEvent".}
proc fcQUndoView_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_moveEvent".}
proc fQUndoView_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_closeEvent".}
proc fcQUndoView_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_closeEvent".}
proc fQUndoView_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_tabletEvent".}
proc fcQUndoView_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_tabletEvent".}
proc fQUndoView_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_actionEvent".}
proc fcQUndoView_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_actionEvent".}
proc fQUndoView_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_showEvent".}
proc fcQUndoView_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_showEvent".}
proc fQUndoView_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_hideEvent".}
proc fcQUndoView_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_hideEvent".}
